cert-manager-webhook-duckdns-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-webhook-duckdns
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager-webhook-duckdns
  template:
    metadata:
      labels:
        app: cert-manager-webhook-duckdns
    spec:
      containers:
        - name: webhook
          image: ghcr.io/rimusz/cert-manager-webhook-duckdns:latest
          args:
            - --groupName=acme.wizfiservices.duckdns
          ports:
            - containerPort: 443
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook-duckdns
  namespace: cert-manager
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: cert-manager-webhook-duckdns
