duckdns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook-duckdns
  namespace: cert-manager
spec:
  selector:
    app: cert-manager-webhook-duckdns
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
