duckdns-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-webhook-duckdns
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-manager-webhook-duckdns
  template:
    metadata:
      labels:
        app: cert-manager-webhook-duckdns
    spec:
      containers:
        - name: webhook
          image: docker.io/wisdomshaibu/cert-manager-webhook-duckdns:v1.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
              name: https
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook-duckdns
  namespace: cert-manager
spec:
  selector:
    app: cert-manager-webhook-duckdns
  ports:
    - protocol: TCP
      port: 443
      targetPort: https
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cert-manager-webhook-duckdns
webhooks:
  - name: webhook.cert-manager-webhook-duckdns.cert-manager.svc
    rules:
      - apiGroups: ["acme.wizfiservices.duckdns"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["*/*"]
    clientConfig:
      service:
        name: cert-manager-webhook-duckdns
        namespace: cert-manager
        path: "/validate"
      caBundle: ""
    admissionReviewVersions: ["v1"]
    sideEffects: None
